--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,6 @@ a{
     font-weight: 550;
     font-size: 0.8rem;
     margin-bottom: 0.35rem;
-    text-transform: uppercase;
 }
 .logo img{
     position:absolute;
@@ -283,7 +282,6 @@ a{
         background: none;
     }
 }
-
 @media screen and (max-width:600px){
     .about-section{
         padding: 0;
@@ -293,6 +291,15 @@ a{
     }
     .header{
         height: 75vh;
+    }
+    .dacs h2{
+        margin-left: 1.95rem;
+    }
+    .dacs h1{
+        margin-left: 1.95rem;
+    }
+    .header button{
+      margin-left: 1.95rem;
     }
 }
 /* FOOTER */
@@ -457,9 +464,18 @@ background: linear-gradient(307deg, rgba(180,1,1,1) 0%, rgba(128,0,0,1) 0%, rgba
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     text-align: center;
-    color: rgba(120,1,1,1);
+    color: black;
     margin-top:2.5rem;
     margin-bottom:2.5rem;
+}
+.gmaps p{
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+    color: black;
+    margin-left:2.5rem;
+}
+.gmaps a{
+    color:rgb(38, 67, 228);
 }
 .bottom-footer{
     color: black;
@@ -468,4 +484,7 @@ background: linear-gradient(307deg, rgba(180,1,1,1) 0%, rgba(128,0,0,1) 0%, rgba
     text-align:center;
     font-family: 'Inter';
     font-size: 1rem;
+}
+.setup iframe{
+    margin-left: 2.5rem;
 }
