--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,622 @@
         {
             padding-top: 40px;
         }
+        *{
+            margin:0;
+            padding:0;
+            box-sizing:border-box;
+            font-family: 'Inter', sans-serif;
+        }
+        html{
+            font-size:1rem;
+        }
+        .navbar-nav > li{
+            margin-left:0.9rem;
+            margin-right:0.9rem;
+        }
+        /* NAVBAR & HEADER BEGIN */
+        .btn .btn-outline-light .btn-lg :hover{
+            color: rgb(219, 188, 13);
+    
+        }
+        a{
+            color:#fff;
+            text-decoration: none;    
+        }
+        .nav-item a{
+            color:white !important;
+            font-size: 1.2rem;
+            position:relative;
+            z-index: 1;
+        }
+        .nav-item a:hover{ 
+            color:rgb(219, 188, 13) !important;
+    
+        }
+        .dropdown-menu a{
+            color:rgb(22, 22, 22) !important;
+        }
+        .navbar{
+            border-bottom: 7px solid rgb(219, 188, 13);
+        }
+        .header{
+            width: 100%;
+            height:80vh;
+            padding-top:11.2rem;   
+            background-image:linear-gradient(42deg, rgba(82,2,2,0.6223295404669944) 0%, rgba(128,0,0,0.7150261696804776) 20%, rgba(180,21,21,0.6279475179950842) 60%, rgba(255,234,0,0.389183473051264) 100%),url(/assets/back2.jpg);
+            background-color: rgb(26, 26, 26);
+            box-shadow: 0 5px 30px rgba(0,0,0,.5);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            color:aliceblue;
+        }
+        button {
+            margin-left: 6.25rem;
+            position: relative;
+            top:30px;
+            display: inline-block;
+            cursor: pointer;
+            outline: none;
+            border: 0;
+            vertical-align: middle;
+            text-decoration: none;
+            background: transparent;
+            padding: 7px;
+        }
+        
+        button.learn-more {
+            width: 12rem;
+            height: auto;
+        }
+        
+        button.learn-more .circle {
+            transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+            position: relative;
+            display: block;
+            margin: 0;
+            width: 3rem;
+            height: 3rem;
+            background: #ffffff;
+            border-radius: 0.35rem;
+        }
+        
+        button.learn-more .circle .icon {
+            transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            background: #800000;
+        }
+        
+        button.learn-more .circle .icon.arrow {
+            transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+            left: 0.625rem;
+            width: 1.125rem;
+            height: 0.125rem;
+            background: none;
+        }
+        
+        button.learn-more .circle .icon.arrow::before {
+            position: absolute;
+            content: "";
+            top: -0.29rem;
+            right: 0.0625rem;
+            width: 0.625rem;
+            height: 0.625rem;
+            border-top: 0.125rem solid #800000;
+            border-right: 0.125rem solid #800000;
+            transform: rotate(45deg);
+        }
+        
+        button.learn-more .button-text {
+            transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            padding: 1.2rem 0;
+            margin: 0 0 0 3rem;
+            color: #ffffff;
+            font-weight: 600;
+            text-align: center;
+            text-transform: uppercase ;
+        }
+        
+        button:hover .circle {
+            width: 100%;
+        }
+        
+        button:hover .circle .icon.arrow {
+            background: #800000;
+            transform: translate(1rem, 0);
+        }
+        
+        button:hover .button-text {
+            color: #800000;;
+        }
+        .dacs h1{
+            text-align: left;
+            color:white;
+            margin-left: 6.25rem;
+            position: relative;
+            top:30px;
+            font-weight: 350;
+            font-size: 3rem;
+        }
+        .dacs h2{
+            text-align: left;
+            margin-left: 6.25rem;
+            font-weight: 550;
+            font-size: 1.1rem;
+            position: relative;
+            top:30px;  
+            margin-bottom: 0.35rem;
+        }
+        .logo img{
+            position:absolute;
+            display: flex;
+            height:45px;
+            left: 60px;
+            top: 15px;
+            z-index: -1;
+        }
+    
+        /* NAVBAR & HEADER FINISHED */
+        .certifications img{
+            margin-top: 70px;
+            margin-bottom: 20px;
+            display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        }
+        /* TESTMONIALS BEGIN */
+    
+        .content p{
+            text-align:center;
+            font-weight:200;
+            padding:10px;
+            color:rgb(49, 49, 49);
+            margin-bottom: 100px;
+            font-size: 1.25rem;
+        }
+    
+        .content h2{
+            font-weight:350;
+            color:rgb(128,0,0);
+            font-size: 3.75rem;
+            padding:5px;
+            margin-top: 50px;;
+            text-align:center;
+            
+        }
+    
+        .testimonials
+        {
+            margin: 50px auto 100px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
+            grid-gap: 0px;
+    
+        }
+        .testimonials .card
+        {
+            position: relative;
+            width:400px;
+            margin: 0 auto;
+            background:rgb(255, 255, 255);
+            padding: 15px;
+            box-sizing: border-box;
+            text-align: center;
+            box-shadow: 0 15px 20px rgba(0, 0, 0, 0.164);
+            overflow: hidden;
+        }
+        .testimonials .card .layer
+        {
+            position: absolute;
+            top:calc(100% - 2px);
+            left:0;
+            width:100%;
+            height: 100%;
+            background: rgb(128,0,0);
+            transition: 0.25s;
+        }
+        .testimonials .card:hover .layer
+        {
+        top: 0;
+        }
+        .testimonials .card .content
+        {
+        position: relative;
+        
+        }
+        .testimonials .card .content p
+        {
+        font-size: 1.125rem;
+        line-height: 24px;
+        color:rgb(0, 0, 0);
+        }
+        .testimonials .card .content .image
+        {
+        width: 100px;
+        height: 100px;
+        margin: 0 auto;
+        margin-top: 10px;
+        border-radius: 100%;
+        overflow:hidden;
+        border: 5px solid #fff;
+        box-shadow: 0 5px 10px rgba(0,0,0,.2);
+        }
+        .testimonials .card .content .image img {
+            max-width: 100%;
+            height: auto;
+        }
+        .testimonials .card .content .details h2
+        { 
+        font-size: 1.875rem;
+        color: rgb(128,0,0);
+        }
+        .testimonials .card:hover .content .details h2
+        { 
+        color: white;
+        }
+        .testimonials .card .content .details h2 span
+        {
+            color: black;
+            font-size: 0.875rem;
+            
+            transition: 0.5s;
+        }
+        .testimonials .card:hover .content .details h2 span
+        {
+            color: white;
+        }
+        .testimonials .card:hover .content p{
+            color: white;
+        }
+        /*ABOUT US BEGIN*/
+        .about-section{
+            background: url(/assets/back1.jpg) no-repeat left;
+            background-size: 75%;
+            background-origin: content-box;
+            overflow: hidden;
+            padding: 100px 0;
+        }
+    
+        .inner-container{
+            width: 65%;
+            height:400px;
+            float: right;
+            background-color: rgb(128,0,0);
+    
+            padding: 35px 15px 35px 15px;
+            box-shadow: 10px 10px 50px rgba(0,0,0,.5);
+        }
+    
+        .inner-container h1{
+            font-weight:300;
+            font-size: 3.75rem;
+            width: 22ch;
+            color:rgb(219, 188, 13);
+            white-space: nowrap;
+            overflow: hidden;
+        }
+        .text{
+            font-size: 1.1875rem;
+            color: white;
+            line-height: 30px;
+            text-align: justify;
+            margin-bottom: 20px;
+        }
+    
+        @media screen and (max-width:1200px){
+            .inner-container{
+                padding: 10px;
+            }
+        }
+    
+        @media screen and (max-width:998px){
+            .html{
+                font-size: 60%;
+            }
+            .about-section{
+                background-size: 100%;
+                padding: 100px 40px;
+            }
+            .inner-container{
+                width: 100%;
+                height: 800px;
+                padding: 35px 0px 35px 0px; 
+            }
+            .inner-container h1{
+                font-size: 2.5rem;
+            }
+            .inner-container p{
+                font-size: 1.2rem;
+            }
+            .header{
+                height:75vh;
+                padding-top:23vh;
+            }
+            .about-section{
+                background: none;
+            }
+        }
+@media screen and (max-width:600px){
+            .about-section{
+                padding: 0;
+            }
+            .inner-container{
+                width: 100%;
+                border-radius: 15px;
+    
+                height: 450px;
+                padding: 25px 10px 25px 10px; 
+            }
+            .inner-container h1{
+                font-size: 2.3rem;
+            }
+            .inner-container p{
+                font-size: 1rem;
+            }
+            .header{
+                height: 450px;
+            }
+            .dacs h2{
+                margin-left: 1.95rem;
+                position: relative;
+                top:-25px;
+            }
+            .dacs h1{
+                margin-left: 1.95rem;
+                position: relative;
+                top:-25px;
+            }
+            .certifications img {
+                margin:50px auto;
+                width: 350px;
+            }
+            .header button{
+            margin-left: 1.95rem;
+            position: relative;
+                top:-25px;
+            }
+        }
+        /* FOOTER */
+        footer
+        {
+            position: fixed;
+            bottom: 0;
+        }
+        @media(max-height:800px)
+        {
+            footer
+            {
+                position: static;
+            }
+            header
+            {
+                padding-top: 40px;
+            }
+        }
+        .footer-ditributed
+        {
+            background: rgb(180,1,1);
+        background: linear-gradient(307deg, rgba(180,1,1,1) 0%, rgba(128,0,0,1) 0%, rgba(120,1,1,1) 50%, rgba(177,23,14,1) 100%);
+            box-sizing: border-box;
+            width: 100%;
+            text-align: left;
+            font: bold 16px sans-serif;
+            padding: 50px 50px 60px 50px;
+            margin-top: 50px;
+        }
+        .footer-ditributed .footer-left,
+        .footer-ditributed .footer-center,
+        .footer-ditributed .footer-right
+        {
+            display: inline-block;
+            vertical-align: top;
+        }
+        .footer-ditributed .footer-left
+        {
+            width: 30%;
+        }
+    
+        .footer-ditributed .footer-left img
+        {
+            width: 90%;
+        }
+        .footer-ditributed .footer-links
+        {
+            color: #ffffff;
+            margin: 20px 0 12px;
+        }
+        .footer-ditributed .footer-links a
+        {
+            display: inline-block;
+            line-height: 1.8;
+            text-decoration: none;
+            color: inherit;
+        }
+    
+        .footer-ditributed .footer-center
+        {
+            width: 35%;
+        }
+        .footer-ditributed .footer-center i
+        {
+            background-color: rgb(219, 188, 13);;
+            color: rgb(41, 41, 41);
+            font-size: 25px;
+            width: 38px;
+            height: 38px;
+            border-radius: 50%;
+            text-align: center;
+            line-height: 42px;
+            margin: 10px 15px;
+            vertical-align: middle;
+        }
+        .footer-ditributed .footer-center i.fa-envelope
+        {
+            font-size: 17px;
+            line-height: 38px;
+        }
+        .footer-ditributed .footer-center p
+        {
+            display: inline-block;
+            color: #fff;
+            vertical-align: middle;
+            margin: 0;
+        }
+        .footer-ditributed .footer-center p span
+        {
+            display: block;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 28px;
+        }
+        .footer-ditributed .footer-center p a
+        {
+            color: #e0ac1c;
+            text-decoration: none;
+        }
+        .footer-ditributed .footer-right
+        {
+            width: 30%;
+        }
+        .footer-ditributed .footer-right .footer-commpany-about
+        {
+            line-height: 20px;
+            color: #ffffff;
+            font-size: 13px;
+            font-weight: normal;
+            margin: 0;
+        }
+        .footer-ditributed .footer-right .footer-commpany-about span
+        {
+            display: block;
+            color: #fff;
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+        .footer-ditributed .footer-right .footer-icons
+        {
+            margin-top: 28px;
+        }
+        .footer-ditributed .footer-right .footer-icons a
+        {
+            display: inline-block;
+            width: 35px;
+            height: 35px;
+            cursor: pointer;
+            background-color: rgb(219, 188, 13);
+            border-radius: 2px;
+            font-size: 20px;
+            color: rgb(22, 22, 22);
+            text-align: center;
+            line-height: 35px;
+            margin: 3px;
+            margin-bottom: 5px;
+            transition: .5s;
+        }
+        .footer-ditributed .footer-right .footer-icons a:hover
+        {
+            background: red;
+        }
+        @media(max-width:880px)
+        {
+            .footer-ditributed .footer-left,
+        .footer-ditributed .footer-center,
+        .footer-ditributed .footer-right
+        {
+            display: block;
+            width: 100%;
+            margin-bottom: 40px;
+            text-align: center;
+        }
+        .footer-ditributed .footer-center i
+        {
+            margin-left: 0;
+        }
+        
+        .about-section{
+            padding: 0;
+        }
+        .inner-container{
+            width: 100%;
+            border-radius: 15px;
+    
+            height: 450px;
+            padding: 25px 10px 25px 10px; 
+        }
+        .inner-container h1{
+            font-size: 2.3rem;
+        }
+        .inner-container p{
+            font-size: 1rem;
+        }
+        .header{
+            height: 450px;
+        }
+        .dacs h2{
+            margin-left: 1.95rem;
+            position: relative;
+            top:-25px;
+        }
+        .dacs h1{
+            margin-left: 1.95rem;
+            position: relative;
+            top:-25px;
+        }
+        .certifications img {
+            margin:50px auto;
+            width: 350px;
+        }
+        .header button{
+        margin-left: 1.95rem;
+        position: relative;
+            top:-25px;
+        }
+        }
+        .gmaps h2{
+            font-family: 'Inter', sans-serif;
+            font-weight: 400;
+            text-align: center;
+            color: black;
+            margin-top:2.5rem;
+            margin-bottom:2.5rem;
+        }
+        .gmaps p{
+            font-family: 'Inter', sans-serif;
+            font-weight: 300;
+            color: black;
+            margin-left:2.5rem;
+        }
+        .gmaps a{
+            color:rgb(38, 67, 228);
+        }
+        .bottom-footer{
+            color: black;
+            padding:0.5rem;
+            background: rgb(219, 188, 13);
+            text-align:center;
+            font-family: 'Inter';
+            font-size: 1rem;
+        }
+        .bottom-footer p{
+            color: black;
+        }
+        .bottom-footer a{
+            color: black;
+        }
+        .setup iframe{
+            margin-left: 2.5rem;
+        }
+        
     }
     .footer-ditributed
     {
@@ -614,3 +1230,42 @@
         margin-left: 2.5rem;
     }
     
+    @media screen and (max-width:400px){
+        .about-section{
+            padding: 0;
+        }
+        .inner-container{
+            width: 100%;
+            border-radius: 15px;
+            height: 570px;
+            padding: 25px 10px 25px 10px; 
+        }
+        .inner-container h1{
+            font-size: 2.3rem;
+        }
+        .inner-container p{
+            font-size: 1rem;
+        }
+        .header{
+            height: 450px;
+        }
+        .dacs h2{
+            margin-left: 1.95rem;
+            position: relative;
+            top:-45px;
+        }
+        .dacs h1{
+            margin-left: 1.95rem;
+            position: relative;
+            top:-45px;
+        }
+        .certifications img {
+            margin:50px auto;
+            width: 350px;
+        }
+        .header button{
+        margin-left: 1.95rem;
+        position: relative;
+            top:-45px;
+        }
+    }
