--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,20 @@
         position:relative;
         z-index: 1;
     }
-    .nav-item a:hover{ 
-        color:rgb(219, 188, 13) !important;
-
-    }
+    
     .dropdown-menu a{
         color:rgb(22, 22, 22) !important;
     }
     .navbar{
         border-bottom: 7px solid rgb(219, 188, 13);
+    }
+    .sylheader {
+        width: 100%;
+        height:80vh;
+        padding-top:11.2rem;
+
+        background-size: cover;;
+        }
     }
     .header{
         width: 100%;
@@ -427,7 +432,8 @@
             z-index: 1;
         }
         .nav-item a:hover{ 
-            color:rgb(219, 188, 13) !important;
+            text-decoration: underline;
+            text-decoration-color: #DBBC0D;
     
         }
         .dropdown-menu a{
